# GKD-Software-2025-Test

./: CMakeLists.txt  test_matrix.cpp  test_row_vector.cpp
parts/: part1.md
src/: apply.cpp  main.cpp  part1.cpp  part1.hpp  part2.cpp  part2.hpp  part3.hpp  part6.cpp  part6.hpp
